# tree-sitter-iop

./: Cargo.toml  Makefile  Package.swift  binding.gyp  core.iop  example_advanced.iop  example_with_comment.iop  example_with_specifier.iop  grammar.js  import.iop  package-lock.json  package.json  pyproject.toml  setup.py  simple_example.iop
bindings/c/: tree-sitter-iop.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_iop/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterIop/: iop.h
lua/: tree-sitter-iop.lua
plugin/: tree-sitter-iop.lua
queries/iop/: highlights.scm  rainbow-delimiters.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c
